# AiPi-BL618-Open-SDK

./: .gitmodules  README.md
AiPi-CAM-D200/: CMakeLists.txt  Makefile  app_include.h  flash_prog_cfg.ini  main.c  proj.conf
AiPi-CAM-D200/ap_web/: mlwip_https.c  mlwip_https.h
AiPi-CAM-D200/bl616_uart/: bl616_uart.c  bl616_uart.h  qyq_frame_at.c  qyq_frame_at.h
AiPi-CAM-D200/bl618_wifi/: bl618_wifi.c  bl618_wifi.h
AiPi-CAM-D200/button/: qyq_module_button.c  qyq_module_button.h
AiPi-CAM-D200/chipconfig/: FreeRTOSConfig.h  chip_include.h  chip_types.h
AiPi-CAM-D200/d200_camera/: d200_camera.c  d200_camera.h
AiPi-CAM-D200/filesystem/: files.c  files.h
